Opened 12 years ago
Closed 12 years ago
#3509 closed defect (fixed)
ffplay unable to play 352800 Hz wav file (pulse audio has a hard limit of 192kHz)
| Reported by: | pross | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | ffplay |
| Version: | unspecified | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
ffplay is unable to play 352800 Hz wav file. the same file plays back in audacity perfectly.
How to reproduce:
% ffplay test_352800hz.wav
ffplay version N-61942-gbad5447 Copyright (c) 2003-2014 the FFmpeg developers
built on Mar 30 2014 15:16:47 with gcc 4.8 (Ubuntu/Linaro 4.8.1-10ubuntu9)
configuration:
libavutil 52. 70.100 / 52. 70.100
libavcodec 55. 55.104 / 55. 55.104
libavformat 55. 36.100 / 55. 36.100
libavdevice 55. 11.100 / 55. 11.100
libavfilter 4. 3.100 / 4. 3.100
libswscale 2. 5.102 / 2. 5.102
libswresample 0. 18.100 / 0. 18.100
Input #0, wav, from 'test_352800hz.wav':q= 0KB sq= 0B f=0/0
Metadata:
title : The Girl Is Mine (With Paul McCartney)
artist : Thriller
date : 1999-26-08
encoder : Lavf55.36.100 (libsndfile-1.0.25)
Duration: 00:00:01.57, bitrate: 11290 kb/s
Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 352800 Hz, 2 channels, s16, 11289 kb/s
SDL_OpenAudio (2 channels): Could not setup PulseAudio stream
SDL_OpenAudio (1 channels): Could not setup PulseAudio stream
No more channel combinations to try, audio open failed
Failed to open file 'test_352800hz.wav' or configure filtergraph
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
Attachments (1)
Change History (9)
by , 12 years ago
| Attachment: | test_352800hz.wav added |
|---|
comment:1 by , 12 years ago
comment:2 by , 12 years ago
After further tests - with export SDL_AUDIODRIVER=pulse instead of export SDL_AUDIODRIVER=alsa which I have in my .bashrc - it appears to me that this is just a limitation of pulse (which audacity maybe doesn't use), I can also reproduce it with mplayer test_352800hz.wav -ao alsa vs mplayer test_352800hz.wav -ao pulse.
comment:4 by , 12 years ago
| Summary: | ffplay unable to play 352800 Hz wav file → ffplay unable to play 352800 Hz wav file (pulse audio has a hard limit of 192kHz) |
|---|
comment:5 by , 12 years ago
For me, I have a hard limit of 200khz, so choosing to just half / quarter the sample rate when over 200khz for efficiency since the sample rate is so high to begin with.
Would like to get some more and longer samples with over 200khz if available.
comment:8 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
This should be fixed in 0c8d8c0c80671fd592697fee5ca7e645c26d2da9, reopen if not.



This works fine here so I would assume a problem with SDL.
$ ffplay test_352800hz.wav -autoexit ffplay version N-61950-g0f2588d Copyright (c) 2003-2014 the FFmpeg developers built on Mar 31 2014 00:15:32 with gcc 4.7 (SUSE Linux) configuration: --enable-gpl libavutil 52. 70.100 / 52. 70.100 libavcodec 55. 55.104 / 55. 55.104 libavformat 55. 36.100 / 55. 36.100 libavdevice 55. 11.100 / 55. 11.100 libavfilter 4. 3.100 / 4. 3.100 libswscale 2. 5.102 / 2. 5.102 libswresample 0. 18.100 / 0. 18.100 libpostproc 52. 3.100 / 52. 3.100 Input #0, wav, from 'test_352800hz.wav':q= 0KB sq= 0B f=0/0 Metadata: title : The Girl Is Mine (With Paul McCartney) artist : Thriller date : 1999-26-08 encoder : Lavf55.36.100 (libsndfile-1.0.25) Duration: 00:00:01.57, bitrate: 11290 kb/s Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 352800 Hz, 2 channels, s16, 11289 kb/s 1.56 M-A: -0.000 fd= 0 aq= 17KB vq= 0KB sq= 0B f=0/0