ffplay: try multiple sample rates if audio open fails

Should fix ticket #3509.

Signed-off-by: Marton Balint <cus@passwd.hu>